Documentando handler de senha
